# nemagazin

./: README.md  pyproject.toml  run.py
application/: menu.py  models.py  service.py
application/db/: __init__.py  base.py
application/storage/: __init__.py  base.py  file_storage.py  memory_storage.py
