[tool.poetry]
name = "nemagazin"
version = "0.1.0"
description = ""
authors = ["ig.rudenko <ig.rudenko@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

sqlalchemy = "^2.0.13"
tabulate = "^0.9.0"
psycopg2 = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
